<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/navigationBarColor"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="com.example.lc_xxx.prueba.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/user"
            android:textColor="@android:color/background_light"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_user"
            android:background="@color/colorPrimary"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/password"
            android:textColor="@android:color/background_light"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_pass"
            android:id="@+id/txtPass"
            android:inputType="textPassword"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_entrar"
            android:onClick="Login"
            android:layout_weight="3"
            android:id="@+id/btnEntrar"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_cancelar"
            android:id="@+id/btnCancelar"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:srcCompat="@mipmap/wow_icon"
            />
    </LinearLayout>

</LinearLayout>
